--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: ">=2.17.3 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,8 +40,13 @@ dependencies:
   flutter_svg: ^1.1.6
   get_storage: ^2.1.1
   sqflite: ^2.2.8+4
+  drift: ^2.3.0
+  path_provider: ^2.0.0
+  path: ^1.8.2
 
 dev_dependencies:
+  build_runner:
+  drift_dev:
   flutter_test:
     sdk: flutter
 
