--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_svg: ^1.1.6
   get_storage: ^2.1.1
+  dio: ^5.3.2
   sqflite: ^2.2.8+4
   drift: ^2.3.0
   path_provider: ^2.0.0
